<resources>
    <string name="app_name">VK messanger</string>

    <string name="action_exit">Выход</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_auth">Авторизация</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="title_activity_message">Диалог</string>

    <string name="title_section1">Сообщения</string>
    <string name="title_section2">В сети</string>
    <string name="title_section3">Все друзья</string>
    <string name="title_settings">Настройки</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="button_send">Отправить</string>

    <string name="sp_token">access_token</string>
    <string name="sp_uid">access_uid</string>

    <string name="text_sex">Пол</string>
    <string name="text_sex_all">Любой</string>
    <string name="text_sex_man">Мужской</string>
    <string name="text_sex_girl">Женский</string>
    <string name="text_age">Возраст</string>
    <string name="text_age_from">От</string>
    <string name="text_age_to">До</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
